--- a/weather-app/asset/css/main.css
+++ b/weather-app/asset/css/main.css
@@ -3,4 +3,20 @@
   padding: 0;
   box-sizing: border-box; }
 
+.container {
+  display: block; }
+  .container .parent {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row; }
+    .container .parent .child {
+      background-color: blue;
+      width: 15%;
+      height: 100px;
+      border: 1px solid black; }
+
+@media screen and (max-width: 911px) {
+  .child {
+    display: none; } }
+
 /*# sourceMappingURL=main.css.map */
