--- a/weather-app/asset/css/main.scss
+++ b/weather-app/asset/css/main.scss
@@ -3,3 +3,22 @@
     padding: 0;
     box-sizing: border-box;
 }
+.container{
+    display: block;
+    & .parent{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        & .child{
+            background-color: blue;
+            width: 15%;
+            height: 100px;
+            border: 1px solid black;
+        }
+    }
+}
+@media screen and (max-width:911px){
+    .child{
+        display: none;
+    }
+}
